# Quadruped-PyMPC

./: .gitignore  .gitmodules  LICENSE  README.md  README_install.md  compose.yaml  config.py  pyproject.toml  quadruped_utils.py  setup.py
gradient/collaborative/: centroidal_model_collaborative.py  centroidal_nmpc_collaborative.py
gradient/input_rates/: centroidal_model_input_rates.py  centroidal_nmpc_input_rates.py
gradient/kinodynamic/: centroidal_model_kinodynamic.py  centroidal_nmpc_kinodynamic.py
gradient/nominal/: centroidal_model_nominal.py  centroidal_nmpc_gait_adaptive.py  centroidal_nmpc_nominal.py
gradient/nominal/c_generated_code_gait_adaptive/: Makefile  acados_sim_solver_centroidal_model.c  acados_sim_solver_centroidal_model.h  acados_solver.pxd  acados_solver_centroidal_model.c  acados_solver_centroidal_model.h  main_centroidal_model.c  main_sim_centroidal_model.c
gradient/nominal/c_generated_code_gait_adaptive/centroidal_model_constraints/: centroidal_model_constr_h_0_fun.c  centroidal_model_constr_h_0_fun_jac_uxt_zt.c  centroidal_model_constr_h_fun.c  centroidal_model_constr_h_fun_jac_uxt_zt.c  centroidal_model_constraints.h
gradient/nominal/c_generated_code_gait_adaptive/centroidal_model_model/: centroidal_model_expl_ode_fun.c  centroidal_model_expl_vde_adj.c  centroidal_model_expl_vde_forw.c  centroidal_model_model.h
helpers/: foothold_reference_generator.py  inverse_kinematics_pin.py  inverse_kinematics_qp.py  other.py  periodic_gait_generator.py  periodic_gait_generator_jax.py  srb_inertia_computation.py  swing_trajectory_controller.py  terrain_estimator.py
helpers/swing_generators/: explicit_swing_trajectory_generator.py  ndcurves_swing_trajectory_generator.py
installation/: mamba_environment.yaml  mamba_environment.yml  mamba_installation.yaml
installation/docker/integrated_gpu/: Dockerfile  dockerfile
installation/docker/nvidia/: Dockerfile  dockerfile
installation/mamba/integrated_gpu/: mamba_environment.yml  mamba_environment_ros.yml  mamba_environment_ros1.yml  mamba_environment_ros2.yml  mamba_environment_ros2_humble.yml  mamba_environment_ros2_jazzy.yml
installation/mamba/nvidia_cuda/: mamba_environment.yml  mamba_environment_experimental.yml  mamba_environment_ros.yml  mamba_environment_ros1.yml  mamba_environment_ros2.yml  mamba_environment_ros2_humble.yml  mamba_environment_ros2_jazzy.yml
quadruped_pympc/: config.py  controller_wrapper.py  quadruped_pympc_wrapper.py  simulation_mujoco.py  srbd_controller_interface.py  wb_interface.py
quadruped_pympc/controllers/: Controllers.py  srb_controller.py
quadruped_pympc/controllers/gradient/collaborative/: centroidal_model_collaborative.py  centroidal_nmpc_collaborative.py
quadruped_pympc/controllers/gradient/input_rates/: centroidal_model_input_rates.py  centroidal_nmpc_input_rates.py
quadruped_pympc/controllers/gradient/kinodynamic/: centroidal_model_kinodynamic.py  centroidal_nmpc_kinodynamic.py  kinodynamic_model.py  kinodynamic_nmpc.py  kinodynamic_nmpc_batched.py
quadruped_pympc/controllers/gradient/lyapunov/: centroidal_model_lyapunov.py  centroidal_nmpc_lyapunov.py
quadruped_pympc/controllers/gradient/nominal/: centroidal_model_nominal.py  centroidal_nmpc_gait_adaptive.py  (+1 more)
quadruped_pympc/controllers/sampling/: centroidal_model_jax.py  centroidal_nmpc_jax.py  centroidal_nmpc_jax_gait_adaptive.py
quadruped_pympc/helpers/: early_stance_detector.py  foothold_reference_generator.py  inverse_kinematics_adam.py  inverse_kinematics_pin.py  math_utils.py  periodic_gait_generator.py  periodic_gait_generator_jax.py  quadruped_utils.py  srb_inertia_computation.py  swing_trajectory_controller.py  terrain_estimator.py  velocity_modulator.py  visual_foothold_adaptation.py
quadruped_pympc/helpers/inverse_kinematics/: inverse_kinematics_adam.py  inverse_kinematics_numeric.py  inverse_kinematics_numeric_adam.py  inverse_kinematics_numeric_mujoco.py  inverse_kinematics_numerical.py  inverse_kinematics_qp.py
quadruped_pympc/helpers/swing_generators/: explicit_swing_trajectory_generator.py  ndcurves_swing_trajectory_generator.py  scipy_swing_trajectory_generator.py
quadruped_pympc/interfaces/: srbd_batched_controller_interface.py  srbd_controller_interface.py  wb_interface.py
quadruped_pympc/simulation/legacy/: old_main.py
ros2/: console.py  dls2_connect.sh  ros2_localhost_connect.sh  run_controller.py  run_simulator.py
ros2/msgs_ws/install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2/msgs_ws/log/: latest_build
ros2/msgs_ws/src/dls2_interface/: CMakeLists.txt  package.xml
ros2/msgs_ws/src/dls2_interface/idl/: BaseState.idl  BlindState.idl  Imu.idl  Pose.idl  Screw.idl  TrajectoryGenerator.idl
ros2/msgs_ws/src/dls2_interface/msg/: BaseState.msg  BlindState.msg  ControlSignal.msg  FeetContactState.msg  Imu.msg  Pose.msg  Screw.msg  TimeDebug.msg  TrajectoryGenerator.msg
sampling/: centroidal_model_jax.py  centroidal_nmpc_jax.py  centroidal_nmpc_jax_gait_adaptive.py  create_dataset_sampling.py  simple_read.py
simulation/: __init__.py  batched_simulations.py  control_test.py  generate_dataset.py  quadruped_env.py  simulation.py  simulation_kinodynamic.py  simulation_mujoco.py  simulation_pinocchio.py  simulation_srbd.py
simulation/legacy/: old_main.py
simulation/robot_model/aliengo/: aliengo.urdf  aliengo.xml  scene_flat.xml  scene_perlin.xml  scene_rough.xml  scene_stairs.xml
simulation/robot_model/go2/: scene_rough.xml
simulation/robot_model/hyqreal/: README.md  hyqreal.urdf  hyqreal.xml  scene_flat.xml  scene_rough.xml
simulation/robot_model/mini_cheetah/: mini_cheetah.urdf  mini_cheetah.xml  mini_cheetah_old.urdf  scene_flat.xml  scene_perlin.xml  scene_rough.xml  scene_suspend_stairs.xml
simulation/robot_model/unitree_go2/: scene.xml  scene_rough.xml  scene_rough2.xml
simulation/terrain_tool/: README.md  readme.md  scene_go2.xml  terrain_generator.py
utils/: math_utils.py  mujoco_visual.py  quadruped_utils.py
utils/mujoco_utils/: visual.py
(+121 files in other folders)
